syntax = "proto3";

package exocore.oracle.v1;

import "exocore/oracle/v1/index_recent_msg.proto";
import "exocore/oracle/v1/index_recent_params.proto";
import "exocore/oracle/v1/native_token.proto";
import "exocore/oracle/v1/params.proto";
import "exocore/oracle/v1/prices.proto";
import "exocore/oracle/v1/recent_msg.proto";
import "exocore/oracle/v1/recent_params.proto";
import "exocore/oracle/v1/validator_update_block.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ExocoreNetwork/exocore/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  // module params
  Params params = 1 [(gogoproto.nullable) = false];
  // prices of all tokens
  repeated Prices prices_list = 2 [(gogoproto.nullable) = false];

  //TODO: userDefinedTokenFeeder
  // latest block on which the validator set be updated
  ValidatorUpdateBlock validator_update_block = 3;
  // index for the cached recent params
  IndexRecentParams index_recent_params = 4;
  // index for the cached recent messages
  IndexRecentMsg index_recent_msg = 5;
  // cached recent messages
  repeated RecentMsg recent_msg_list = 6[(gogoproto.nullable) = false]; 
  // cached recent params
  repeated RecentParams recent_params_list = 7[(gogoproto.nullable) = false];
  // stakerInfos for each nst token
  repeated StakerInfosAssets staker_infos_assets = 8[(gogoproto.nullable) = false];
  // stakerList for each nst token
  repeated StakerListAssets staker_list_assets = 9[(gogoproto.nullable) = false];
}

// stakerInfosAssets bond stakerinfos to their related assets id
message StakerInfosAssets {
  // asset_id tells the assetid which the stakerInfos belong to
  string asset_id = 1;
  // stakerInfos
  repeated StakerInfo staker_infos = 2;
}

// stakerListAssets bond stakerList to their related assets id
message StakerListAssets {
  // asset_id tells the assetid which the stakerList belong to
  string asset_id = 1;
  // stakerList
  StakerList staker_list = 2;
}
